# PocketBookTest

./: CMakeLists.txt  CMakePresets.json  qml.qrc
GrayImageCompressor/: CMakeLists.txt  GrayImageCompressor.cpp  GrayImageCompressor.h
include/: filemodel.h  fileprocessor.h
qml/: main.qml
src/: filemodel.cpp  fileprocessor.cpp  main.cpp
